2014-07-18 Nelson Gonzalez <nigm2005@gmail.com>

	* (Configs) now the save sensors and commands options are 
	read from the team config file.
	* (Parser) the sensors and commands file logs have the
	format name <TEAM_NAME>_<UNIFORM_NUMBER>_<SENSOR>.log

2014-07-17 Nelson Gonzalez <nigm2005@gmail.com>

	* (Player) method initForPlayer splitted in setDataForPlayer
	to pass the war data to the object and then InitForPlayer
	compute the absolute position and direction
	* (Parser) fixed an ugly bug which desynchronizes the players
	with the player self localization
	
	* (Player) added time to live member to Player class to
	indicate to the World class how many cycles the player will
	remain in memory after it is out of sight range

2014-07-16 Nelson Gonzalez <nigm2005@gmail.com>

	* (Player) Removed isLocalized method, and added
	getDistanceError method.
	
	* (Flag) Refactored computing of distance error and
	direction error.
	
	* (PFilter) Updated revision of particle filters class
	
	* (worldtest) Added world model test

2014-07-15 Nelson Gonzalez <nigm2005@gmail.com>

	* (tests) Moved test files to trainer directory
	
	* (Flag) Changed some method names in Flag class and added
	direction methods
	
	* (Point) added operator + to Point structure which returns
	a new point with the displacement Vector in the argument
	
	* (Position) new constructor for Position using a Point
	structure, re-added getX, getY and getDirection.
	
	* (WorldModel) Added getAllExactPlayers method to WorldModel
	class

2014-07-14 Nelson Gonzalez <nigm2005@gmail.com>

	* (Position) removed the head factor in the getDirectionTo
	method.
	
	* (Self) added head offset in the localization methods.

2014-06-30 Nelson Gonzalez <nigm2005@gmail.com>

	* (Position) all the positions returned by Self, Player and
	Ball objects are now pointers.  The Self objects returns a
	const Position* pointer.

2014-06-29 Nelson Gonzalez <nigm2005@gmail.com>

	* (Vector2D) Vector2D refactored as struct and moved to 